[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/light-gray-background-with-small-sparkles-texture-macro-focus-microtexture_328295-112.webp" type="Texture" id=1]
[ext_resource path="res://Assets/menu_button_purple_unpressed.png" type="Texture" id=2]
[ext_resource path="res://Assets/GUI/Comfortaa-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/gray-painted-background_53876-94041.webp" type="Texture" id=4]
[ext_resource path="res://Assets/menu_button_purple_pressed.png" type="Texture" id=5]
[ext_resource path="res://Assets/menu_button_yellow_pressed.png" type="Texture" id=6]
[ext_resource path="res://Assets/menu_button_yellow_unpressed.png" type="Texture" id=7]
[ext_resource path="res://Assets/menu_button_orange_pressed.png" type="Texture" id=8]
[ext_resource path="res://Assets/menu_button_orange_unpressed.png" type="Texture" id=9]
[ext_resource path="res://Menus/MainMenu/MiddleButtons.gd" type="Script" id=10]
[ext_resource path="res://Menus/MainMenu/MainMenu.gd" type="Script" id=11]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_color = Color( 0.615686, 0.556863, 0.690196, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 40
outline_size = 3
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 28
outline_size = 2
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 40
outline_size = 3
use_filter = true
font_data = ExtResource( 3 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayMenu" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="PlayMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="PlayMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PlayMenu"]
margin_left = 30.0
margin_top = 30.0
margin_right = 1050.0
margin_bottom = 1050.0
rect_pivot_offset = Vector2( -786, -238 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Username" type="Label" parent="PlayMenu/VBoxContainer"]
margin_right = 1020.0
margin_bottom = 57.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Player"
valign = 1

[node name="Version" type="Label" parent="PlayMenu/VBoxContainer"]
margin_top = 61.0
margin_right = 1020.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( -50, -271 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Version 0.1"
valign = 1

[node name="ServerDetails" type="Label" parent="PlayMenu/VBoxContainer"]
margin_top = 84.0
margin_right = 1020.0
margin_bottom = 103.0
rect_pivot_offset = Vector2( -50, -271 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "1970"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PlayMenu/VBoxContainer"]
margin_top = 107.0
margin_right = 1020.0
margin_bottom = 807.0
custom_constants/margin_top = 700
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MiddleButtons" type="VBoxContainer" parent="PlayMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -362.0
margin_top = -232.0
margin_right = 155.0
margin_bottom = 99.0
rect_scale = Vector2( 1.4, 1.4 )
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Modes" type="TextureButton" parent="PlayMenu/MiddleButtons"]
margin_left = 134.0
margin_right = 384.0
margin_bottom = 166.0
rect_min_size = Vector2( 250, 166 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayMenu/MiddleButtons/Modes"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.37
margin_right = 3.37
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "MODES"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PlayMenu/MiddleButtons"]
margin_top = 170.0
margin_right = 518.0
margin_bottom = 336.0

[node name="Play" type="TextureButton" parent="PlayMenu/MiddleButtons/HBoxContainer"]
margin_right = 250.0
margin_bottom = 166.0
rect_min_size = Vector2( 250, 166 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayMenu/MiddleButtons/HBoxContainer/Play"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "PLAY"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectedMode" type="Label" parent="PlayMenu/MiddleButtons/HBoxContainer/Play"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 38.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Classic"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PlayMenu/MiddleButtons/HBoxContainer"]
margin_left = 254.0
margin_right = 264.0
margin_bottom = 166.0
custom_constants/margin_right = 5
custom_constants/margin_left = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Custom" type="TextureButton" parent="PlayMenu/MiddleButtons/HBoxContainer"]
margin_left = 268.0
margin_right = 518.0
margin_bottom = 166.0
rect_min_size = Vector2( 250, 166 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PlayMenu/MiddleButtons/HBoxContainer/Custom"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "CUSTOM"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LookingForGame" type="Panel" parent="PlayMenu"]
visible = false
anchor_left = 0.5
anchor_top = 0.8
anchor_right = 0.5
anchor_bottom = 0.8
margin_left = -400.0
margin_top = -40.0
margin_right = 400.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="PlayMenu/LookingForGame"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Looking for game..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="NinePatchRect" type="NinePatchRect" parent="CanvasLayer"]
anchor_top = 0.9
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 150 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="PlayMenu/MiddleButtons/Modes" to="PlayMenu/MiddleButtons" method="_on_Modes_button_down"]
[connection signal="button_up" from="PlayMenu/MiddleButtons/Modes" to="PlayMenu/MiddleButtons" method="_on_Modes_button_up"]
[connection signal="pressed" from="PlayMenu/MiddleButtons/Modes" to="PlayMenu/MiddleButtons" method="_on_Modes_pressed"]
[connection signal="button_down" from="PlayMenu/MiddleButtons/HBoxContainer/Play" to="PlayMenu/MiddleButtons" method="_on_Play_button_down"]
[connection signal="button_up" from="PlayMenu/MiddleButtons/HBoxContainer/Play" to="PlayMenu/MiddleButtons" method="_on_Play_button_up"]
[connection signal="pressed" from="PlayMenu/MiddleButtons/HBoxContainer/Play" to="PlayMenu/MiddleButtons" method="_on_Play_pressed"]
[connection signal="button_down" from="PlayMenu/MiddleButtons/HBoxContainer/Custom" to="PlayMenu/MiddleButtons" method="_on_Custom_button_down"]
[connection signal="button_up" from="PlayMenu/MiddleButtons/HBoxContainer/Custom" to="PlayMenu/MiddleButtons" method="_on_Custom_button_up"]
[connection signal="pressed" from="PlayMenu/MiddleButtons/HBoxContainer/Custom" to="PlayMenu/MiddleButtons" method="_on_Custom_pressed"]
